* New feature (potentially breaking): --gtest_list_tests now prints
  the type parameters and value parameters for each test.
* Improvement: char pointers and char arrays are now escaped properly
  in failure messages.
* Improvement: failure summary in XML reports now includes file and
  line information.
* Improvement: the <testsuites> XML element now has a timestamp attribute.
* Fixed the bug where long --gtest_filter flag values are truncated in
  death tests.
* Potentially breaking change: RUN_ALL_TESTS() is now implemented as a
  function instead of a macro in order to work better with Clang.
* Compatibility fixes with C++ 11 and various platforms.
* Bug/warning fixes.

Changes for 1.6.0:

* New feature: ADD_FAILURE_AT() for reporting a test failure at the
  given source location -- useful for writing testing utilities.
* New feature: the universal value printer is moved from Google Mock
  to Google Test.
* New feature: type parameters and value parameters are reported in
  the XML report now.
* A gtest_disable_pthreads CMake option.
* Colored output works in GNU Screen sessions now.
* Parameters of value-parameterized tests are now printed in the
  textual output.
* Failures from ad hoc test assertions run before RUN_ALL_TESTS() are
  now correctly reported.
* Arguments of ASSERT_XY and EXPECT_XY no longer need to support << to
  ostream.
* More complete handling of exceptions.
* GTEST_ASSERT_XY can be used instead of ASSERT_XY in case the latter
  name is already used by another library.
* --gtest_catch_exceptions is now true by default, allowing a test
  program to continue after an exception is thrown.
* Value-parameterized test fixtures can now derive from Test and
  WithParamInterface<T> separately, easing conversion of legacy tests.
* Death test messages are clearly marked to make them more
  distinguishable from other messages.
* Compatibility fixes for Android, Google Native Client, MinGW, HP UX,